fixed feature blogs margin

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,3 +5,7 @@ a[aria-disabled="true"], a[disabled="true"] {
 a[aria-disabled="true"]:active, a[disabled="true"]:active {
     pointer-events: none;
 }
+
+.card {
+    height: 100%;
+}
