--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,3 +16,89 @@ a[aria-disabled="true"]:active, a[disabled="true"]:active {
         margin-right: 0;
     }
 }
+
+.main-wrapper {
+  &.dark {
+    .navbar {
+      background-color: transparent;
+      .navbar-item {
+        color: #d8d8d8;
+      }
+
+      .navbar-brand {
+        .title {
+          color: #d8d8d8;
+        }
+      }
+    }
+
+    .navbar-burger span {
+      background-color: #979797;
+    }
+
+    .day-night-toggle.react-toggle .react-toggle-track {
+      background-color: #fff;
+    }
+
+    .title, .subtitle, .content, .post-title {
+      color: #d8d8d8;
+    }
+
+    .card {
+      background-color: #232129;
+      transition: color 0s ease-out 0s, background 0.2s ease-out 0s;
+      .card-body-wrapper {
+        background-color: #232129;
+        transition: color 0s ease-out 0s, background 0.2s ease-out 0s;
+      }
+    }
+
+    .head-wrapper h2 {
+      color: #fff;
+    }
+    #navbarExampleTransparentExample.is-active {
+      background-color: #232129;
+    }
+
+    label, strong, h5 {
+      color: #fff;
+    }
+
+    a {
+      color: #dcdcdc;
+
+      span {
+        color: #2e2e2e;
+      }
+    }
+  }
+}
+
+.day-night-toggle.react-toggle {
+  &.react-toggle--checked:hover {
+    &:not(.react-toggle--disabled) .react-toggle-track {
+      background-color: black;
+    }
+  }
+
+  .react-toggle-track {
+    background-color: black;
+    &:hover {
+      background-color: black;
+    }
+
+    &-x, &-check {
+      right: 8px;
+      width: 15px;
+      height: 15px;
+
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+      svg.fa-sun {
+        color: #f1f118;
+      }
+    }
+  }
+}
